# stria

./: .env.example  .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml  run.py
scripts/: test_image.py
stria/: config.py  main.py  models.py  pipeline.py
stria/data/: cassette_profiles.json  protocols.json
stria/routes/: detect.py  read.py  results.py
stria/services/: assistant.py  imaging.py  llm_client.py  protocols.py  retrieval.py  storage.py  vision.py
stria/utils/: image.py
tests/integration/: test_api.py
tests/unit/: test_imaging.py  test_models.py  test_pipeline.py  test_retrieval.py
web-client/: .gitignore  FRONTEND.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
web-client/app/: globals.css  layout.tsx  page.tsx
web-client/app/scan/: page.tsx
web-client/components/: WakeupPing.tsx
web-client/components/landing/: About.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  StatsBar.tsx  TestTypeGrid.tsx
web-client/components/scan/: AssistantDrawer.tsx  CameraCapture.tsx  LightboxTip.tsx  LinesSummary.tsx  ProcessingScreen.tsx  ProtocolPanel.tsx  ResultCard.tsx  TestTypeSelector.tsx
web-client/lib/: api.ts  types.ts
