[tool.poetry]
name = "stria"
version = "0.1.0"
description = "AI-powered rapid diagnostic test reader for community health workers"
authors = ["Julien <juliengmanana@gmail.com>"]
readme = "README.md"
packages = [{ include = "stria" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
python-multipart = ">=0.0.12"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
opencv-python-headless = ">=4.10.0"
numpy = ">=1.26.0"
pillow = ">=11.0.0"
anthropic = ">=0.40.0"
rank-bm25 = ">=0.2.2"
aiosqlite = ">=0.20.0"
asyncpg = ">=0.30.0"
slowapi = ">=0.1.9"
python-json-logger = ">=2.0.7"
python-dotenv = ">=1.0.0"
openai = "^2.36.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"